--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
     <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <div class="nav-section1">
+                <img src="./images/Frame.png" alt="">
+                <h3><span>G</span>amer</h3>
+            </div>
+            <div class="nav-section2">
+                <ul>
+                    <li class="text">About Us</li>
+                    <li class="text">Developers</li>
+                    <li class="text">
+                       <div class="follow">
+                        Follow Us On
+                        <img src="./images/Vector.png" alt="">
+                        <img src="./images/tik-tok 1.png" alt="">
+                       </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
