responsive main section part 1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,31 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="main-section1">
+            <h2 class="heading1">Play Like The</h2>
+            <h1 class="heading2"><b>G.O.A.T.</b></h1>
+            <div class="icon-and-text">
+                <div class="pause">
+                    <img src="./images/Frame (1).png" alt="">
+                    <p class="text">1-Click instant play</p>
+                </div>
+                <div class="download">
+                    <img src="./images/Frame (2).png" alt="">
+                    <p class="text">No Download</p>
+                </div>
+                <div class="friend">
+                    <img src="./images/Frame (3).png" alt="">
+                    <p class="text">1000s of supported online games</p>
+                </div>
+            </div>
+            <button class="btn">Sign In</button>
+            <button class="btn2">Go Rogue</button>
+        </div>
+        <div class="main-section2">
+           <img src="./images/Group 18.png" alt="">
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
