--- a/index.html
+++ b/index.html
@@ -54,6 +54,94 @@
            <img src="./images/Group 18.png" alt="">
         </div>
     </main>
-    <footer></footer>
+    <main class="main2">
+        <div class="main-section3">
+            <div class="main-section3-img">
+                <img src="./images/pngwing 4.png" alt="">
+            </div>
+            <div class="main-section3-content">
+                <h2 class="main-section3-heading">We are gamer</h2>
+                <p class="text">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn">know more</button>
+                <p class="text">Our purpose... <br>
+                    <b>“unleash the gamer in everyone”</b></p>
+            </div>
+        </div>
+    </main>
+    <main class="main3">
+    <div class="main3">
+        <h3 class="main3">Online Games <span class="main-section3-heading">Funny Videos</span></h3>
+        <p class="text">A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="main3-img">
+            <div class="img1">
+                <img src="./images/Rectangle 4.png" alt="">
+                <p class="text">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="img2">
+                <img src="./images/Rectangle 5.png" alt="">
+                <p class="text">Did you score? #unblockedgames #school</p>
+            </div>
+            <div class="img3">
+                <img src="./images/Rectangle 7.png" alt="">
+                <p class="text">Breaking game records like OG</p>
+            </div>
+            <div class="img4">
+                <img src="./images/Rectangle 6.png" alt="">
+                <p class="text">Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+        </div>
+    </div>
+    </main>
+    <main class="main4">
+        <div class="main4">
+            <div class="main4-content">
+                <h3><span class="main-section3-heading">Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.</h3>
+                   <p class="text">Play games online for free without downloading. <br> Just click the Play button <br> and play instantly in your browser.</p> 
+            </div>
+           <div class="main4-img">
+            <div class="main4-img1"><img src="./images/Rectangle 55.png" alt="" width="350px" height="350px"></div>
+            <div class="main4-img2"><img src="./images/Rectangle 66.png" alt="" width="150px" height="150px"></div>
+           </div>
+        </div>
+    </main>
+    <main class="main5">
+       <div class="button">
+         <button class="btn-1"><img src="./images/Rectangle 12.png" alt="" width="30px" height="30px">Adventure Games</button>
+        <button class="btn-2"><img src="./images/Rectangle 11.png" alt="" width="30px" height="30px">Action Games</button>
+        <button class="btn-3"><img src="./images/Rectangle 13.png" alt="" width="30px" height="30px">Arcade Games</button>
+        <button class="btn-4"><img src="./images/Rectangle 14.png" alt="" width="30px" height="30px">Educational Games</button>
+    </div>
+    <div class="button2">
+        <button class="btn-1"><img src="./images/Rectangle 16.png" alt="" width="30px" height="30px">Role Palying Games</button>
+        <button class="btn-2"><img src="./images/Rectangle 17.png" alt="" width="30px" height="30px">Music & Audio Games</button>
+        <button class="btn-3"><img src="./images/Rectangle 18.png" alt="" width="30px" height="30px">Puzzle Games</button>
+        <button class="btn-4"><img src="./images/Rectangle 19.png" alt="" width="30px" height="30px">Strategy Games</button>
+    </div>
+    </main>
+    <footer>
+        <div class="nav-section1">
+            <img src="./images/Frame.png" alt="">
+            <h3><span>G</span>amer</h3>
+        </div>
+         <div class="foot">
+            <ul id="ul-id" class="text">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+         </div>
+         <div class="logo">
+            <img src="./images/apple 1.png" alt="">
+            <img src="./images/facebook 1.png" alt="">
+            <img src="./images/linkedin 1.png" alt="">
+            <img src="./images/apple 1.png" alt="">
+         </div>
+         <p class="text">Play Games @ Gamer @ <br> 2000-2023 Gamer Bangladesh</p>
+    </footer>
 </body>
 </html>
